--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.16.0"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd staff-frontend && npm run build",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
