--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm i cd staff-frontend && npm i && npm run build",
+    "build": "cd staff-frontend && npm i && npm run build",
     
     "start": "nodemon server.js"
   },
