--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd staff-frontend && npm i && npm run build",
-    
-    "start": "nodemon server.js"
+    "client": "npm start --prefix frontend",
+    "server": "nodemon server.js",
+    "clientinstall": "npm install --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run  client\"",
+    "render-postbuild": "NPM_CONFIG_PRODUCTION=false  npm install --prefix client && npm run build --  prefix client",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
