edit package.json file

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm i npm start --prefix frontend",
-    "server": "nodemon server.js",
+    "server": "node server.js",
     "clientinstall": "npm install --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run  client\"",
+    "dev": "concurrently \"npm run server\" npm run clientinstall\" \"npm run  client\"",
     "render-postbuild": "NPM_CONFIG_PRODUCTION=false  npm install --prefix client && npm run build --  prefix client",
     "start": "node server.js"
   },
